Add SpecIT code generation workflow with automated backend and frontend code generation from OpenAPI contracts
Implement GitHub Actions workflow to automatically generate Spring interfaces/DTOs and TypeScript types/clients from OpenAPI specifications. Includes Maven plugin for backend codegen, npm scripts for frontend codegen, automated PR creation on contract changes, and failure notifications via GitHub issues.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 .idea/
 .DS_Store
 Thumbs.db
+
+# Generated code (SpecIT)
+# Keep .gitkeep but ignore generated files
+backend/generated/
+backend/target/generated-sources/
+frontend/src/services/generated/*
+!frontend/src/services/generated/.gitkeep
