--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -119,9 +119,9 @@ jobs:
 
       - name: Install dependencies
         working-directory: frontend
-        run: npm ci
+        run: npm install
 
-      - name: Install code generation tools
+      - name: Install code generation tools (global)
         run: |
           npm install -g openapi-typescript openapi-typescript-codegen
 
